Memperbaiki bug, word wrap pada box message

--- a/static/style.css
+++ b/static/style.css
@@ -33,6 +33,7 @@ body {
   border-radius: 5px;
   background-color: #f2f2f2;
   box-shadow: 0 0 5px #ccc;
+  word-wrap: break-word;
 }
 
 .message-text {
